添加文件强制同步配置项

--- a/src/config.toml
+++ b/src/config.toml
@@ -7,6 +7,9 @@ ALLOW_IMG = true
 # 是否允许对图片进行压缩与预处理
 # Whether to allow compressing and preprocessing images
 ALLOW_IMG_PREPROCESS = true
+# 强制同步,当Cell工具添加出现失败时(如无法添加Markdown Cell)
+# Whether to force synchronization, when the Cell tool addition fails (such as failing to add Markdown Cell)
+FORCE_SYNC = false
 
 # 图片配置
 # Image Configuration
