--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
     "jupyter-collaboration>=4.1.1",
     "jupyter-kernel-client>=0.8.0",
     "jupyter-nbmodel-client>=0.14.0",
+    "jupyter-server-api>=0.1.0",
     "nbformat>=5.10.4",
     "pillow>=10.0.0",
 ]
