--- a/src/better_jupyter_mcp_server/config.toml
+++ b/src/better_jupyter_mcp_server/config.toml
@@ -7,6 +7,9 @@ ALLOW_IMG = true
 # 是否允许对图片进行压缩与预处理
 # Whether to allow compressing and preprocessing images
 ALLOW_IMG_PREPROCESS = true
+# 是否在每一次操作后自动保存notebook
+# Whether to automatically save notebook after each operation
+AUTO_SAVE_NOTEBOOK = false
 
 # 图片配置
 # Image Configuration
